# mosze-semester-project-hellfire

Hellfire/: .gitignore  CMakeLists.txt  hellfire.cbp
Hellfire/assets/: encounters.xml  potions.xml  weapons.xml
Hellfire/include/: Chapter.h  Game.h  attributes.h  chapter.h  chest.h  choice.h  consumable.h  encounter.h  encounterrepository.h  enums.h  game.h  gamestatemanager.h  interaction.h  inventory.h  item.h  itemrepository.h  player.h  render.h  scene.h  weapon.h
Hellfire/lib/cmake/SDL2/: sdl2-config.cmake
Hellfire/src/: Chapter.cpp  Game.cpp  attributes.cpp  chapter.cpp  chest.cpp  choice.cpp  consumable.cpp  encounter.cpp  encounterrepository.cpp  game.cpp  gamestatemanager.cpp  interaction.cpp  inventory.cpp  item.cpp  itemrepository.cpp  main.cpp  player.cpp  render.cpp  scene.cpp  weapon.cpp
Hellfire/story/: story.xml  story.xml.bak
Hellfire/tests/: gtest-SaveLoad.cpp  gtest-game.cpp  gtest-items.cpp  gtest-player.cpp  gtest-story.cpp
